# BLETempSensor

./: .gdbinit  CMakeLists.txt  Kconfig  LICENSE  README.md  prj.conf  sample.yaml
boards/: nrf52832custom_nrf52832.overlay  nrf52840dk_nrf52840.conf
src/: main.c  temp_sensor.h  temp_sensor_ds1621.c  temp_sensor_mcp9808.c  voltage_sensor.c  voltage_sensor.h
